General fixes. Need to test on iPhone, but images seem to be not squished any more.

--- a/www/index.css
+++ b/www/index.css
@@ -413,6 +413,13 @@ aside {
     top: 0;
     padding-bottom: 3rem;
 }
+@media screen and (max-width: 600px)
+{
+    aside
+    {
+    height: auto;
+    }
+}
 aside blockquote {
     padding: 0.5rem;
     color: #fff;
@@ -521,10 +528,10 @@ aside .nav {
         clear: none;
     }
 }
-.Chart-Image{
-    max-width: 50%;
-    max-height: 50%;
-    align: center;
+.Chart-Image {
+}
+.Chart-Image img{
+    max-width: 45%;
 }
 .Title-Text-Frame {
     clear: both;
